service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantum-godjoke
spec:
  selector:
    app: quantum-godjoke
  ports:
  - port: 3921
    targetPort: 3921
  type: NodePort
