ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quantum-godjoke-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: quantum-godjoke.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quantum-godjoke
            port: 
              number: 3921
